Fix alignment for top left card section

--- a/styles/style.css
+++ b/styles/style.css
@@ -78,6 +78,8 @@
     display: flex;
     flex-direction: column;
 
+    margin-right: auto;
+
     background-color: inherit;
 }
 
